crates/pg_syntax/tests/snapshots/postgres_regress/join@368.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO a VALUES (0, 0), (1, NULL);"
---
InsertStmt@0..39
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "a"
  Whitespace@13..14 " "
  SelectStmt@14..37
    Values@14..20 "VALUES"
    Whitespace@20..21 " "
    Ascii40@21..22 "("
    List@22..26
      AConst@22..23
        Iconst@22..23 "0"
      Ascii44@23..24 ","
      Whitespace@24..25 " "
      AConst@25..26
        Iconst@25..26 "0"
    Ascii41@26..27 ")"
    Ascii44@27..28 ","
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..37
      AConst@30..31
        Iconst@30..31 "1"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..37
        NullP@33..37 "NULL"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

