crates/pg_syntax/tests/snapshots/postgres_regress/join@371.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d VALUES (1,3), (2,2), (3,1);"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "d"
  Whitespace@13..14 " "
  SelectStmt@14..39
    Values@14..20 "VALUES"
    Whitespace@20..21 " "
    Ascii40@21..22 "("
    List@22..25
      AConst@22..23
        Iconst@22..23 "1"
      Ascii44@23..24 ","
      AConst@24..25
        Iconst@24..25 "3"
    Ascii41@25..26 ")"
    Ascii44@26..27 ","
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..32
      AConst@29..30
        Iconst@29..30 "2"
      Ascii44@30..31 ","
      AConst@31..32
        Iconst@31..32 "2"
    Ascii41@32..33 ")"
    Ascii44@33..34 ","
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..39
      AConst@36..37
        Iconst@36..37 "3"
      Ascii44@37..38 ","
      AConst@38..39
        Iconst@38..39 "1"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

