crates/pg_syntax/tests/snapshots/postgres_regress/join@394.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select p.* from\n  (parent p left join child c on (p.k = c.k)) join parent x on p.k = x.k\n  where p.k = 1 and p.k = 2;"
---
SelectStmt@0..117
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "p"
      Ascii46@8..9 "."
      AStar@9..10
        Ascii42@9..10 "*"
  Whitespace@10..11 " "
  From@11..15 "from"
  Newline@15..16 "\n"
  Whitespace@16..18 "  "
  Ascii40@18..19 "("
  JoinExpr@19..88
    JoinExpr@19..59
      RangeVar@19..27
        Ident@19..25 "parent"
        Whitespace@25..26 " "
        Ident@26..27 "p"
      Whitespace@27..28 " "
      Left@28..32 "left"
      Whitespace@32..33 " "
      Join@33..37 "join"
      Whitespace@37..38 " "
      RangeVar@38..45
        Ident@38..43 "child"
        Whitespace@43..44 " "
        Alias@44..45
          Ident@44..45 "c"
      Whitespace@45..46 " "
      On@46..48 "on"
      Whitespace@48..49 " "
      Ascii40@49..50 "("
      AExpr@50..59
        ColumnRef@50..53
          Ident@50..51 "p"
          Ascii46@51..52 "."
          Ident@52..53 "k"
        Whitespace@53..54 " "
        Ascii61@54..55 "="
        Whitespace@55..56 " "
        ColumnRef@56..59
          Ident@56..57 "c"
          Ascii46@57..58 "."
          Ident@58..59 "k"
    Ascii41@59..60 ")"
    Ascii41@60..61 ")"
    Whitespace@61..62 " "
    Join@62..66 "join"
    Whitespace@66..67 " "
    RangeVar@67..75
      Ident@67..73 "parent"
      Whitespace@73..74 " "
      Alias@74..75
        Ident@74..75 "x"
    Whitespace@75..76 " "
    On@76..78 "on"
    Whitespace@78..79 " "
    AExpr@79..88
      ColumnRef@79..82
        Ident@79..80 "p"
        Ascii46@80..81 "."
        Ident@81..82 "k"
      Whitespace@82..83 " "
      Ascii61@83..84 "="
      Whitespace@84..85 " "
      ColumnRef@85..88
        Ident@85..86 "x"
        Ascii46@86..87 "."
        Ident@87..88 "k"
  Newline@88..89 "\n"
  Whitespace@89..91 "  "
  Where@91..96 "where"
  Whitespace@96..97 " "
  BoolExpr@97..116
    AExpr@97..104
      ColumnRef@97..100
        Ident@97..98 "p"
        Ascii46@98..99 "."
        Ident@99..100 "k"
      Whitespace@100..101 " "
      Ascii61@101..102 "="
      Whitespace@102..103 " "
      AConst@103..104
        Iconst@103..104 "1"
    Whitespace@104..105 " "
    And@105..108 "and"
    Whitespace@108..109 " "
    AExpr@109..116
      ColumnRef@109..112
        Ident@109..110 "p"
        Ascii46@110..111 "."
        Ident@111..112 "k"
      Whitespace@112..113 " "
      Ascii61@113..114 "="
      Whitespace@114..115 " "
      AConst@115..116
        Iconst@115..116 "2"
  Ascii59@116..117 ";"

